--- a/ab_test_bigquery.ipynb
+++ b/ab_test_bigquery.ipynb
@@ -460,12 +460,10 @@
         "              event_name = 'click'\n",
         "              AND page_location LIKE '%/shoplist%'\n",
         "              AND (\n",
-        "                link_url LIKE '%amazon.com%'\n",
-        "                OR link_url LIKE '%smartstore.naver.com%'\n",
-        "                OR link_url LIKE '%coupang.com%'\n",
-        "                OR link_url LIKE '%auction.co.kr%'\n",
-        "                OR link_url LIKE '%11st.co.kr%'\n",
-        "                OR link_url LIKE '%gmarket.co.kr%'\n",
+        "                link_url LIKE '%xxx.com%'\n",
+        "                OR link_url LIKE '%xxx.com%'\n",
+        "                OR link_url LIKE '%xxx.com%'\n",
+        "                OR ...\n",
         "              )\n",
         "      ),\n",
         "      CTE_users_assigned_converted AS (\n",
